width of spotify iframe on mobile screens fixed

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -92,3 +92,9 @@ nav a {
     max-width: 70vw; /* Adjust the percentage as needed */
   }
 }
+
+@media (max-width: 500px) {
+  .max-w-sif {
+    max-width: 90vw; /* Adjust the percentage as needed */
+  }
+}
